# Yagi

frontend/: .gitignore  Cargo.toml  Trunk.toml  index.html  structure.txt  styles.css
frontend/src/: app.rs  build_errs.txt  errors.rs  lib.rs  main.rs  store.rs
frontend/src/components/: add_goat_form.rs  dashboard.rs  delete_goat_form.rs  goat_delete.rs  goat_list.rs  mod.rs  sidebar.rs  update_goat_form.rs
frontend/src/components/add_goat_components/: breed_input.rs  gender_input.rs  mod.rs
shared/: Cargo.toml
shared/src/: lib.rs
src/: main.rs
