[package]
name = "frontend"
version = "0.1.0"
edition = "2024"
description = "Livestock Management Frontend using Yew and WASM"
license = "MIT"

[dependencies]
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo-net = "0.5" # For HTTP requests
shared = { path = "../shared" }
yew = { version = "0.21", features = ["csr"] }
log = "0.4"
wasm-logger = "0.2"
yewdux = "0.11.0"
thiserror = "2.0.16"
[dependencies.web-sys]
version = "0.3"
features = ["HtmlInputElement",
    "HtmlSelectElement",
    "SubmitEvent",
    "HtmlFormElement"] 
